--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>邱帅，可以成为我的好弟弟吗？</title>
+    <title>小伙，可以成为我的好弟弟吗？</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img id="mainImage" src="images/heart.png" alt="爱心">
-        <h1 id="question">邱帅，可以成为我的好弟弟吗？</h1>
+        <h1 id="question">小伙，可以成为我的好弟弟吗？</h1>
         <div class="buttons">
             <button id="yes">包的</button>
             <button id="no">不要</button>
